--- a/public/new-invoice.html
+++ b/public/new-invoice.html
@@ -70,18 +70,12 @@
         "quantity": 0,
         "price": 0
     }],
-    "paymentOptions": [{
-        "description": "",
-        "initialPayment": 0,
-        "discount": 0,
-        "discountType": "",
-        "schedule": [
-            "$Date()"
-        ]
-    }],
+    "initialPayment": 0,
+    "schedule": [
+        "$Date()"
+    ],
     "events": [""],
-    "type": "",
-    "status": "pending"
+    "type": ""
 }
         </textarea>
       </div>
