--- a/email-templates/act-lesson-series/lesson - Final.html
+++ b/email-templates/act-lesson-series/lesson - Final.html
@@ -45,14 +45,15 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td style="padding: 30px 0px 30px 0px;">
-          <div style="text-align:center">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">Congratulations!</h2>
-          </div>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             You have successfully made it through our 12 weeks ACT Lesson series! Second only to your GPA, the ACT is the most influential factor to 
             being accepted to college. Additionally, the ACT is crucial to receiving scholarship money and affording college. As such, we would like to offer you
-            20% off when signing up for one of our guaranteed programs.
+            20% off when signing up for one of our guaranteed programs using the PROMO below.
           </p>
+          <h1 style="text-align: center; color: #27c03a;">
+            LessonSeries
+          </h1>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Our programs have been optimized to maximize your point increase on the ACT. Rather than a preset curriculum path that you will see with most other ACT prep courses (the same  
             path and material as every other student), the pace and course is set by you! We adapt to your needs and strengths. You will learn to identify question types on the ACT and the 
@@ -60,20 +61,6 @@
             problems. With the 4-point guaranteed program, you can expect to increase your ACT score by 4 - 6 points! This could make a HUGE difference when applying for colleges and when 
             qualifying for scholarships.
           </p>
-        </td>
-      </tr>
-    </table>
-
-    <table role="presentation" border="0" width="100%" cellspacing="0" style = 'margin-bottom: 2em'>
-      <tr>
-        <td align="center">
-          <table role="presentation" align="center" border="0" cellspacing="0">
-            <tr>
-              <td align="center" bgcolor="#27c03a" style="border-radius: .5em;">
-                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; display: inline-block; border: 1px solid #27c03a;">PROMO: LessonSeries</a>
-              </td>
-            </tr>
-          </table>
         </td>
       </tr>
     </table>
