--- a/email-templates/act-lesson-series/lesson-8 program.html
+++ b/email-templates/act-lesson-series/lesson-8 program.html
@@ -1,6 +1,32 @@
 <head>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600&display=swap');
+.table {
+	border-collapse: collapse;
+	border-style: solid;
+	border-color: black;
+	border-width: 2px;
+
+  -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
+  page-break-inside: avoid; /* Firefox */
+  break-inside: avoid; /* IE 10+ */
+
+  margin-bottom: 1em;
+}
+
+.table th {
+	text-align: center;
+	padding: 4px 8px 4px 8px;
+	border: 2px solid black;
+}
+
+.table td {
+	text-align: center;
+	border: 1px solid #e3e3e3;
+  border-right: 2px solid black;
+	padding: 4px 8px;
+}
+
   </style>
 </head>
 <body style="font-family: 'proxima-nova', sans-serif;">
@@ -19,50 +45,46 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td style="padding: 30px 0px 30px 0px;">
-          <h2 style="font-size: 28px; margin:0 0 20px 0;">Math - Polygons</h2>
+          <h2 style="font-size: 28px; margin:0 0 20px 0;">Science - Conflicting Viewpoint</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            The polygons topic on the math section of the ACT is the most important topic. You will see 6 - 8 of 
-            these questions on every test. These questions will ask you to find the area, perimeter, circumference, surface area, or volume of a given shape or object. Some of 
-            the important equations to know are the area of a triangle, area of a rectangle, area of a circle, perimeter of a rectangle, and circumference of a circle.
+            Conflicting Viewpoints is the second most important topic on the Science section of the ACT. Rather than being a question type, conflicting viewpoints 
+            is a passage type that will always contain 7 questions. This passage rarely contains tables, charts, or figures but rather contains various 
+            'viewpoints': usually students, scientists, or hypotheses.
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            These questions vary greatly but solving typically involves writing down applicable equations, given values, 
-            plugging in known values, and / or linking one equation to another.
+            When approaching this section, you will begin by skimming each question and labeling them according to the viewpoint(s) required to answer the question: 
+            1, 2, 1 + 3, <u>A</u>ll, <u>N</u>one, etc. Once all questions have been labeled, read the intro text then answer any questions labeled with an N (None). 
+            Next, read viewpoint one then answer the questions labeled with 1; read viewpoint 2 and answer questions labeled with 2 then questions labeled with 1 and 2. 
+            Continue this process until all questions have been answered.
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             For example,
           </p>
-          <div style="margin: 0px 36px 24px;">
-            <p style="margin:0 0 12px 0;font-size:16px;line-height:20px;">
-              One side of square ABCD has a length of 12 meters. A certain rectangle whose area is equal to the area of 
-              ABCD has a width of 8 meters. What is the length, in meters, of the rectangle?
+          <div style="margin: 0 36px;">
+            <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;text-indent: 50px;">
+              Student 2 indicates that the hyphae of a GPM are primarily involved in producing:
             </p>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
-              <b>A.</b> 12
+          <table class="table" align="center">
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>A.</b> energy.
             </p>
-            <br>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
-              <b>B.</b> 16
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>B.</b> spores.
             </p>
-            <br>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
-              <b>C.</b> 18
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>C.</b> toxins.
             </p>
-            <br>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
-              <b>D.</b> 20
-            </p>
-            <br>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
-              <b>E.</b> 24
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>D.</b> offspring.
             </p>
           </div>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            We know that this is a polygon question because it asks us to find the area of a square and that of a rectangle. We'll start by 
-            writing applicable equations down: Area of a square = b ⋅ b; Area of a rectangle = l ⋅ w; Area of square = Area of rectangle. Next, we'll plug 
-            in values that we have: b = 12 --> Area of square = 12 ⋅ 12 = 144. Thus, the Area of both the square and rectangle is 144. Using the equation of a rectangle 
-            we get 144 = l ⋅ 8; dividing both sides by 8, we get l = 18: answer C.
+            In this question, we see that we are concerned with Student 2's viewpoint, and only their viewpoint. Thus, we would label this question with a 2 and would 
+            answer this question after we read student 2's point of view.
           </p>
+        </td>
+      </tr>
+    </table>
 
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
@@ -74,7 +96,6 @@
         </td>
       </tr>
     </table>
-
 
     <table role="presentation" border="0" width="100%">
       <tr>
