question explanations test taker

--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -474,6 +474,9 @@
             <div class = 'rows' id = 'questionsPart1'>
               <label for="questionText" id='questionTextLabel'>Question Text</label>
               <textarea placeholder="Copy question here" id = 'questionText'></textarea>
+
+              <label for="questionExplanation" id='questionExplanationLabel'>Question Explanation</label>
+              <textarea placeholder="Question explanation" id = 'questionExplanation'></textarea>
             </div>
 
             <div id = 'questionsPart2' class = 'rows'>
@@ -561,6 +564,7 @@
       <div id='qNumbers' class='finalProductDiv'></div>
       <div id='pText' class='finalProductDiv'></div>
       <div id='qList' class='finalProductDiv'></div>
+      <div id='eText' class='finalProductDiv'></div>
     </div>
 
   </main>
