--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -3,69 +3,56 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. Data driven success for your student in any class or upcoming test.">
-    <title>Lyrn | Data Driven Tutoring through Adaptive Learning</title>
+    <title>Sign Up</title>
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
     <script src="Site Templates/site-wide.js"></script>
     <script src="sign-up.js" defer></script>
 
-    <script src="Site Templates/formatting.js" defer></script>
+    <script src="Dialog.js"></script>
 
     <link href="sign-up.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/ibd0auf.css">
   </head>
 
   <body>
-    <!-- <header class="nav-start">
-      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
-      <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-      </label>
-      <input type="checkbox" id="nav-toggle" class="nav-toggle">
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="story.html">Our Story</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="enroll.html">Enroll</a></li>
-        </ul>
-      </nav>
-    </header> -->
-
     <main>
       <section class="register">
         <div class="intro">
-          <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+          <a href="index.html">
+            <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
+              <g>
+                <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
+                <polygon points="417.34,494.64 471.25,609.28 450.18,662.57 496.66,658.85 564.21,472.95 516.49,478.52 493.56,549.79 466.29,486.58 	"/>
+                <path d="M577.22,471.09v125.8l45.24-4.34l-1.24-69.41c0,0,13.63-16.73,38.35-16.73v-47.85c0,0-24.19,3.15-37.33,19.98v-12.62L577.22,471.09z"/>
+                <path d="M675.34,459.54v124.14c0,1.41,1.23,2.51,2.63,2.34l40.5-4.71c1.19-0.14,2.09-1.15,2.09-2.34v-76.8
+                  c0-0.34,0.18-0.64,0.21-0.98c0.27-2.93,7.07-13.36,21.72-10.05c0.11,0.02,0.2,0.03,0.31,0.05c1.21,0.27,8.78,2.38,8.78,12.06
+                  l0.51,72.12c0.01,1.37,1.18,2.45,2.55,2.34l40.52-3.3c1.23-0.1,2.17-1.12,2.17-2.35v-84.58c0-18.63-11.12-38.81-30.05-43.75
+                  c-14.4-3.76-32.48-0.04-42.64,11.23c-1.43,1.59-4.07,0.53-4.07-1.61l0,0c0-1.45-1.29-2.55-2.72-2.33l-40.5,6.19
+                  C676.19,457.38,675.34,458.37,675.34,459.54z"/>
+              </g>
+            </svg>
+          </a>
           <ul class="info">
             <li>
-              <h2>Easy to get started</h2>
-              <p>Schedule your first lesson or sign up for a program</p>
+              <h2>Free Resources</h2>
+              <p>Every new user gets 3 full length ACT tests on our custom test taker.</p>
             </li>
             <li>
-              <h2>Everything in one place</h2>
-              <p>All of your lessons can be accessed through you personalized dashboard</p>
+              <h2>Flexible Tutoring</h2>
+              <p>Start with just 1 hour or plan an entire program. Let's get that score up!</p>
             </li>
             <li>
-              <h2>Safe and secure payments</h2>
-              <p>Pay for everything up front or set a up subscription</p>
+              <h2>Learn from the Best</h2>
+              <p>We have thousands of hours of ACT prep experience.</p>
             </li>
           </ul>
         </div>
         <form action="" id="signup">
           <h1>Start Lyrning</h1>
-          <h2>I'm a</h2>
-          <div class="radios">
-            <input type="radio" name="role" id="student" value="student" checked required>
-            <label for="student">Student</label>
-            <input type="radio" name="role" id="parent" value="parent" required>
-            <label for="parent">Parent</label>
-          </div>
+          <br>
           <label for="firstName">First Name</label>
           <input type="text" name="firstName" id="firstName" required>
           <label for="lastName">Last Name</label>
@@ -80,46 +67,5 @@
           <p class="error" id="error"></p>
           <p class="have-account">Have an account? <a href="sign-in">Sign in</a></p>
         </form>
-      <!-- </section>
-      <section class="topics"></section> -->
     </main>
-
-    <!-- <footer>
-      <div class="links">
-        <div>
-          <div class="logo-box">
-            <img src="Images/Lyrn_Logo.png" alt="Lyrn Logo">
-          </div>
-        </div>
-        <div>
-          <h3>Site Map</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="story.html">About Lyrn</a></li>
-            <li><a href="enroll.html">Enrollment</a></li>
-            <li><a href="sign-in.html">Parent Portal</a></li>
-            <li><a href="">Pricing</a></li>
-            <li><a href="sign-in.html">Log In</a></li>
-          </ul>
-        </div>
-        <div>
-          <h3>Social</h3>
-          <ul>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">TikTok</a></li>
-          </ul>
-        </div>
-        <div>
-          <h3>Contact Us</h3>
-          <ul>
-            <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
-            <li><a href="tel:+13857070215">(385) 707-0215</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
-    </footer> -->
   </body>
