--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -15,6 +15,7 @@
     <script src="Dialog.js"></script>
 
     <link href="sign-up.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="Site Templates/site-wide.css"> -->
     <link rel="stylesheet" href="https://use.typekit.net/ibd0auf.css">
   </head>
 
