--- a/public/Dashboard/Student.html
+++ b/public/Dashboard/Student.html
@@ -8,10 +8,7 @@
     <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
     <script src="../Site Templates/site-wide.js"></script>
     <script src="Student.js"></script>
@@ -19,7 +16,7 @@
   </head>
 
   <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <h2 style="color: #110D65;">I'm confused ... How did you get here?</h2>
+    <h2 style="color: #110D65;">Redirecting to the Test Taker</h2>
     <button class="button" onclick="signOut()">Sign Out</button>
 
   </body>
