--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -62,6 +62,7 @@
   <section class="landing" id="landing">
     <div class="loading"></div>
     <div class="header">
+      <div class="container"><h1 onclick="signOut()" style="cursor: pointer;">SIGN OUT</h1></div>
       <div class="container"><h1><span class="color-accent">TEST</span> TAKER</h1></div>
       <div class="container">
         <a href="../index.html" target="_blank">
