--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -501,7 +501,7 @@
 
             <div class = 'rows'>
               <button onclick = 'clickInput()' style = 'margin-top: 1.45em; margin-left: 10px'>Add Image</button>
-              <input id = 'questionsImage' type = 'file' accept = "image/png" onchange="addImage()" style = 'display: none;'>
+              <input id = 'questionsImage' type = 'file' accept = "image/*" onchange="addImage()" style = 'display: none;'>
             </div>
 
           </div>
