ready for applications

--- a/public/careers.html
+++ b/public/careers.html
@@ -40,6 +40,7 @@
       </section>
 
       <section class="content">
+        <p style="color: var(--color-accent-5-deep);">Unfortunately we are not currently hiring tutors. We hope to resume hiring in the coming month. If you are still interested in future employment send us your resume and we would still love to keep you in mind for our next round of tutors.</p>
         <h2>Hiring Tutors</h2>
         <p>At Lyrn, we are dedicated to providing the most advanced tutoring to our students. This cannot be accomplished without dedicated tutors who love teaching as much as they 
           love learning. Our flexible hours make it easy for anyone to join our team and start teaching. We let you completely control your own schedule to fit your chaotic college
