--- a/public/pricing.html
+++ b/public/pricing.html
@@ -103,7 +103,8 @@
           <!-- <li><a href="enroll.html">Enroll</a></li> -->
         </ul>
       </nav>
-      <div class="phone" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
+      <!-- <div class="phone" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div> -->
+      <div class="phone"><a href="sign-in.html">Sign in</a></div>
     </header>
 
     <!-- start banner -->
@@ -127,7 +128,7 @@
       </div>
     </div>
 
-    <div class="banner" id="lessonSeries_banner">
+    <div class="banner active" id="lessonSeries_banner">
       <p>Get started with <strong>12 free</strong> ACT lessons. Click for details.</p>
     </div>
     <div class="modal" id="lessonSeries_modal">
@@ -265,7 +266,7 @@
           <h1>ACT Prep</h1>
         </div>
 
-        <div class="practice-test-wrapper">
+        <!-- <div class="practice-test-wrapper">
           <h2>4 free full length ACT section practice tests</h2>
           <p>Not sure how many points you need to go up? Take a <strong>free</strong> full length ACT tests and get your results back immediately.</p>
           <div class="flex-row">
@@ -276,12 +277,13 @@
           <div class="footnotes">
             <p>By clicking 'Submit' you agree to our <a href="terms.html">terms of use</a></p>
           </div>
-        </div>
+        </div> -->
 
         <div class="program-selector" id="program_selector">
+          <br>
           <h3>I'm looking for</h3>
           <div class="selection-wrapper">
-            <input type="radio" name="program-selection" id="crash" onclick=openProgram(event) checked>
+            <input type="radio" name="program-selection" id="crash" onclick=openProgram(event)>
             <label for="crash">Crash Course</label>
             <p>4 hours of FREE ACT instruction in all sections over 2 weeks.</p>
 
@@ -297,14 +299,14 @@
             <label for="study-groups">Study Groups</label>
             <p>Smaller group size means our tutors can focus more on your student.</p> -->
 
-            <input type="radio" name="program-selection" id="one-on-one" onclick=openProgram(event)>
+            <input type="radio" name="program-selection" id="one-on-one" onclick=openProgram(event) checked>
             <label for="one-on-one">One-on-One</label>
             <p>The best way to prepare for the ACT is one-on-one with our tutors.</p>
           </div>
         </div>
 
         <!-- Crash Course -->
-        <div class="program crash open" id="crash_course">
+        <div class="program crash" id="crash_course">
           <h2>Go over the most important topics</h2>
           <h4>Just two weeks to cover all 4 sections</h4>
           
@@ -958,7 +960,7 @@
         </div>
 
         <!-- one-on-one -->
-        <div class="program one-on-one">
+        <div class="program one-on-one open">
           <h2>Get the score you deserve or your money back*</h2>
           <h4>Choose a program that helps you reach your goals</h4>
 
