better test taker

--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -23,6 +23,7 @@
     <script src="../Site Templates/site-wide.js"></script>
     <script src="Dev.js"></script>
     <script src="../Dialog.js"></script>
+    <script src="../Time.js"></script>
 
   </head>
 
@@ -129,6 +130,7 @@
       <table id="feedback-table" class="display compact cell-border">
         <thead>
           <tr>
+            <th>Type</th>
             <th>Feedback</th>
             <th>Time</th>
             <th>User</th>
