--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -201,8 +201,8 @@
             <li>Check the desired topic (verify this is the only topic checked)</li>
             <li>Set the desired topic's weight to "1"</li>
             <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage at a time.)</li>
-            <li>Set the "Open" time to any time before right now</li>
-            <li>Set the "Close" time to some time in the future (make sure it is enough time to start it in the test taker)</li>
+            <li>Deselect "Open"</li>
+            <li>Deselect "Close"</li>
             <li>Set the "Time" to blank</li>
             <li>Select "Worksheet" for the topic</li>
             <li>Submit the assignment</li>
@@ -228,8 +228,8 @@
             <li>Check the desired topics (verify these are the only topic checked)</li>
             <li>Set the desired topics' weights to their given frequency</li>
             <li>Set the "Number of Questions" to blank (READING: set to "1". This will give only 1 passage at a time.)</li>
-            <li>Set the "Open" time to any time before right now</li>
-            <li>Set the "Close" time to some time in the future (make sure it is enough time to start it in the test taker)</li>
+            <li>Deselect "Open"</li>
+            <li>Deselect "Close"</li>
             <li>Set the "Time" to blank</li>
             <li>Select "Practice" for the topic</li>
             <li>Submit the assignment</li>
@@ -274,7 +274,7 @@
           <p>
             These assignments are the second at home asssignment the student will complete after each session.
             They will be assigned to be done a week after a session as a review of material a week after.
-            The topics are chosen based on all lessons taught up to this point.
+            The topics are chosen as the top 10 topics based on score.
           </p>
           <p>How to create</p>
           <ul>
@@ -284,7 +284,7 @@
             <li>Select the desired section</li>
             <li>You should now see the list of topics for that section ordered by frequency</li>
             <li>Check the desired topics (verify these are the only topic checked)</li>
-            <li>Set the desired topics' weights to their given score</li>
+            <li>Set the desired topics' weights to their given frequency</li>
             <li>Set the "Number of Questions" to blank</li>
             <li>Set the "Open" time to a week from yesterday at midnight</li>
             <li>Set the "Close" time to 2 days after open at midnight</li>
